crates/crucible-cli/src/tui/oil/tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__overlay_snapshots__snapshot_raw_drawer_with_history.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests.rs
expression: render_app_raw(&app)
---
 
[38;2;40;44;52m▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄[39m
[48;2;40;44;52m[38;2;192;202;245m [TIME]: [49m[39m[38;2;0;206;209m[1m[7m INFO [0m[48;2;40;44;52m[38;2;192;202;245m Session saved[49m[39m[48;2;40;44;52m                                                 [49m
[48;2;40;44;52m[38;2;192;202;245m [TIME]: [49m[39m[38;2;0;206;209m[1m[7m INFO [0m[48;2;40;44;52m[38;2;192;202;245m Thinking display: on[49m[39m[48;2;40;44;52m                                          [49m
[48;2;40;44;52m[38;2;192;202;245m [TIME]: [49m[39m[38;2;0;206;209m[1m[7m INFO [0m[48;2;40;44;52m[38;2;192;202;245m Indexing files[49m[39m[48;2;40;44;52m                                                [49m
[48;2;40;44;52m[38;2;192;202;245m [TIME]: [49m[39m[38;2;224;175;104m[1m[7m WARN [0m[48;2;40;44;52m[38;2;192;202;245m Context at 85%[49m[39m[48;2;40;44;52m                                                [49m
[38;2;40;44;52m▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀[39m
[48;5;14m[38;5;0m[1m MESSAGES [0m [38;5;14mESC/q[39m [38;2;100;110;130mclose[39m
