crates/crucible-cli/src/tui/oil/tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__overlay_snapshots__snapshot_raw_perm_bash.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests.rs
assertion_line: 1709
expression: render_app_raw(&app)
---
                                                                                
[38;2;40;44;52m▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄[0m
[38;2;255;255;255m  npm install lodash[0m                                                            
                                                                                
[1m  > [y] Yes[0m                                                                     
[38;2;192;202;245m    [n][0m[38;2;255;255;255m No[0m                                                                      
[38;2;192;202;245m    [a][0m[38;2;255;255;255m Allowlist[0m                                                               
[38;2;40;44;52m▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀[0m
[7m PERMISSION[0m [1m BASH[0m [38;2;247;118;142m  y/n/a[0m[38;2;100;110;130m options[0m[38;2;247;118;142m  ↑↓[0m[38;2;100;110;130m move[0m[38;2;247;118;142m  Tab[0m[38;2;100;110;130m entry[0m[38;2;247;118;142m  Esc[0m[38;2;100;110;130m cancel[0m
